--- a/Flexbox-Challenges/css/main.css
+++ b/Flexbox-Challenges/css/main.css
@@ -157,10 +157,19 @@
     border-radius: 12px;
 }
 
-.tittle__caret-wrapper img{
-    padding-right: 0.816rem;
-    transform: rotate(-180deg);
+.tittle__caret-wrapper{
+    display: flex;
     place-self: center;
+    width: 40px;
+    height: 40px;
+    background: #D9D9D9;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.tittle__caret-wrapper img{
+    rotate: 180deg;
+    margin: auto;
 }
 
 .detail__top-container h2{
@@ -316,7 +325,7 @@
 }
 
 .detail__bottom-container .detail__sub{
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .detail__bottom-container div:nth-child(2) ~ div{
@@ -376,6 +385,10 @@
 .order__bot{
     margin-top: 0.438rem;
     gap: 1.938rem;
+}
+
+.cards-wrapper .card-container:nth-child(2){
+    height: 689px;
 }
 
 .cards-wrapper .card-container:nth-child(3){
