--- a/Shop-Piece-Challenge/css/main.css
+++ b/Shop-Piece-Challenge/css/main.css
@@ -308,7 +308,7 @@ main{
     box-sizing: border-box;
 }
 
-.footer-1>div:nth-child(4)>div:nth-child(3)>button{
+.footer-1>div:nth-child(4)>div:nth-child(3)>a{
     width: 167px;
     height: 60px;
     background: #5046E5;
